# remuir

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  config.mk
input/: README.md
input/env/: metal.c  start.S
input/include/: am.h  device.h
input/scripts/: am.mk  linker.ld
input/tests/: hello.c
src/: cpu.rs  engine.rs  isa.rs  main.rs  memory.rs  monitor.rs  utils.rs
src/cpu/: core.rs  difftest.rs  exec.rs
src/cpu/difftest/: dut.rs
src/engine/: control.rs  init.rs
src/isa/: decode.rs  inst.rs
src/memory/: access.rs  pmem.rs
src/monitor/: init.rs  monitor.rs  sdb.rs
src/utils/: ansi.rs  config.rs  constant.rs  debug.rs  disasm.rs
tools/: difftest.mk
tools/spike-diff/: Makefile  difftest.cc
