[package]
name = "remuir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No need for extra features like colors(ansi_term)
# or suggestions, clap features disable by default
# See more on https://docs.rs/structopt/latest/structopt
structopt = { version = "0.3.26", default-features = false }
rustyline = "5.0.2"
capstone = "0.12.0"
lazy_static = "1.4.0"
libloading = "0.6"
